# fetch-rs

./: .gitignore  CLAUDE.md  Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: benchmark.yml  ci.yml
benchmarks/: README.md  run-oha.sh  run.ts  server-fetch-rs.ts  server-node-http.ts
examples/: echo-body.ts  hello-world.ts  json-api.ts
lib/: fetch-event.ts  index.ts  server.ts
rfcs/: 00001.md
src/: lib.rs  request.rs  response.rs  server.rs
tests/e2e/: server.test.ts
tests/unit/: fetch-event.test.ts  headers.test.ts  request.test.ts  response.test.ts
